github_data_collector/src/data/issue_comment/quericy_one-key-ikev2-vpn.txt
1. 之前用脚本装了一个一直正常工作，昨天开始连不上，我看ipsec status都是在connecting
2. 试了重新安装、重置vps安装、从CentOS7换Ubuntu安装都不行
3. 试了DO的vps安装就可以
4. bandwagonhost这个还是能正常ssh

所以很好奇究竟是啥原因不工作了呢？
Hi,
I could install and use the script, Thank you
But on some internet (Mostly ADSL or 4G modems) I can connect but no internet on the connection
What's the problem?
How can I resolve this problem?
Appreciate for any help
Hi,
I need details on how to setup server and multiple clients both.
My server and client are on the same LAN.




建议添加对Ipv4与Ipv6的支持，现在大多数宽带都开始有ipv6了，且ipv6有公网ip，求添加对ipv6的支持，谢谢！
你好，我按顺序执行，但是编译strongewans报错,VPS是Ubuntu 18.04 LTS (GNU/Linux 4.15.0-20-generic x86_64)，下面是报错日志
In file included from utils/utils.h:54:0,
                 from library.h:101,
                 from library.c:17:
utils/utils/memory.h: In function ‘memwipe_inline’:
utils/utils/memory.h:99:15: error: ‘uintptr_t’ undeclared (first use in this function); did you mean ‘__intptr_t’?
  for (i = 0; (uintptr_t)&c[i] % sizeof(long) && i < n; i++)
               ^~~~~~~~~
               __intptr_t
utils/utils/memory.h:99:15: note: each undeclared identifier is reported only once for each function it appears in
Makefile:1918: recipe for target 'library.lo' failed
make[5]: *** [library.lo] Error 1
make[5]: Leaving directory '/root/strongswan-5.5.1/src/libstrongswan'
Makefile:2004: recipe for target 'all-recursive' failed
make[4]: *** [all-recursive] Error 1
make[4]: Leaving directory '/root/strongswan-5.5.1/src/libstrongswan'
Makefile:1149: recipe for target 'all' failed
make[3]: *** [all] Error 2
make[3]: Leaving directory '/root/strongswan-5.5.1/src/libstrongswan'
Makefile:519: recipe for target 'all-recursive' failed
make[2]: *** [all-recursive] Error 1
make[2]: Leaving directory '/root/strongswan-5.5.1/src'
Makefile:579: recipe for target 'all-recursive' failed
make[1]: *** [all-recursive] Error 1
make[1]: Leaving directory '/root/strongswan-5.5.1'
Makefile:488: recipe for target 'all' failed
make: *** [all] Error 2
make  install-recursive
make[1]: Entering directory '/root/strongswan-5.5.1'
Making install in src
make[2]: Entering directory '/root/strongswan-5.5.1/src'
Making install in .
make[3]: Entering directory '/root/strongswan-5.5.1/src'
make[4]: Entering directory '/root/strongswan-5.5.1/src'
make[4]: Nothing to be done for 'install-exec-am'.
make[4]: Nothing to be done for 'install-data-am'.
make[4]: Leaving directory '/root/strongswan-5.5.1/src'
make[3]: Leaving directory '/root/strongswan-5.5.1/src'
Making install in include
make[3]: Entering directory '/root/strongswan-5.5.1/src/include'
make[4]: Entering directory '/root/strongswan-5.5.1/src/include'
make[4]: Nothing to be done for 'install-exec-am'.
make[4]: Nothing to be done for 'install-data-am'.
make[4]: Leaving directory '/root/strongswan-5.5.1/src/include'
make[3]: Leaving directory '/root/strongswan-5.5.1/src/include'
Making install in libstrongswan
make[3]: Entering directory '/root/strongswan-5.5.1/src/libstrongswan'
make  install-recursive
make[4]: Entering directory '/root/strongswan-5.5.1/src/libstrongswan'
Making install in .
make[5]: Entering directory '/root/strongswan-5.5.1/src/libstrongswan'
depbase=`echo library.lo | sed 's|[^/]*$|.deps/&|;s|\.lo$||'`;\
/bin/bash ../../libtool  --tag=CC   --mode=compile gcc -DHAVE_CONFIG_H -I. -I../..  -I../../src/libstrongswan -DIPSEC_DIR=\"/usr/local/libexec/ipsec\" -DIPSEC_LIB_DIR=\"/usr/local/lib/ipsec\" -DPLUGINDIR=\"/usr/local/lib/ipsec/plugins\" -DSTRONGSWAN_CONF=\"/usr/local/etc/strongswan.conf\"       -g -O2 -Wall -Wno-format -Wno-format-security -Wno-pointer-sign -include /root/strongswan-5.5.1/config.h -MT library.lo -MD -MP -MF $depbase.Tpo -c -o library.lo library.c &&\
mv -f $depbase.Tpo $depbase.Plo
libtool: compile:  gcc -DHAVE_CONFIG_H -I. -I../.. -I../../src/libstrongswan -DIPSEC_DIR=\"/usr/local/libexec/ipsec\" -DIPSEC_LIB_DIR=\"/usr/local/lib/ipsec\" -DPLUGINDIR=\"/usr/local/lib/ipsec/plugins\" -DSTRONGSWAN_CONF=\"/usr/local/etc/strongswan.conf\" -g -O2 -Wall -Wno-format -Wno-format-security -Wno-pointer-sign -include /root/strongswan-5.5.1/config.h -MT library.lo -MD -MP -MF .deps/library.Tpo -c library.c  -fPIC -DPIC -o .libs/library.o
In file included from utils/utils.h:54:0,
                 from library.h:101,
                 from library.c:17:
utils/utils/memory.h: In function ‘memwipe_inline’:
utils/utils/memory.h:99:15: error: ‘uintptr_t’ undeclared (first use in this function); did you mean ‘__intptr_t’?
  for (i = 0; (uintptr_t)&c[i] % sizeof(long) && i < n; i++)
               ^~~~~~~~~
               __intptr_t
utils/utils/memory.h:99:15: note: each undeclared identifier is reported only once for each function it appears in
Makefile:1918: recipe for target 'library.lo' failed
make[5]: *** [library.lo] Error 1
make[5]: Leaving directory '/root/strongswan-5.5.1/src/libstrongswan'
Makefile:2004: recipe for target 'install-recursive' failed
make[4]: *** [install-recursive] Error 1
make[4]: Leaving directory '/root/strongswan-5.5.1/src/libstrongswan'
Makefile:2161: recipe for target 'install' failed
make[3]: *** [install] Error 2
make[3]: Leaving directory '/root/strongswan-5.5.1/src/libstrongswan'
Makefile:519: recipe for target 'install-recursive' failed
make[2]: *** [install-recursive] Error 1
make[2]: Leaving directory '/root/strongswan-5.5.1/src'
Makefile:579: recipe for target 'install-recursive' failed
make[1]: *** [install-recursive] Error 1
make[1]: Leaving directory '/root/strongswan-5.5.1'
Makefile:876: recipe for target 'install' failed
make: *** [install] Error 2
./one-key-ikev2.sh: line 330: ipsec: command not found
./one-key-ikev2.sh: line 331: ipsec: command not found
./one-key-ikev2.sh: line 332: ipsec: command not found
./one-key-ikev2.sh: line 333: ipsec: command not found
./one-key-ikev2.sh: line 333: ipsec: command not found
./one-key-ikev2.sh: line 337: ipsec: command not found
./one-key-ikev2.sh: line 338: ipsec: command not found
./one-key-ikev2.sh: line 338: ipsec: command not found
configure the pkcs12 cert password(Can be empty):
unable to load private key
139728073454016:error:0909006C:PEM routines:get_name:no start line:../crypto/pem/pem_lib.c:745:Expecting: ANY PRIVATE KEY
####################################
cp: cannot create regular file '/usr/local/etc/ipsec.d/cacerts/': No such file or directory
cp: cannot create regular file '/usr/local/etc/ipsec.d/certs/': No such file or directory
cp: cannot create regular file '/usr/local/etc/ipsec.d/private/': No such file or directory
cp: cannot create regular file '/usr/local/etc/ipsec.d/certs/': No such file or directory
cp: cannot create regular file '/usr/local/etc/ipsec.d/private/': No such file or directory

用--nofork选项启动ipsec，日志里面有这样的信息是正常的吗？
07[IKE] peer requested virtual IP **%any6**
07[IKE] no virtual IP found for **%any6** requested by 'raof01'
1、strongSwan版本需要改成5.6.1  脚本里的5.5.1无法编译  可以在脚本里搜索关键字修改版本
2、执行脚本前ifconfig看一下网卡名字  脚本里默认是eth0  Ubuntu某个版本以上就变成ens3了  
      如果网卡名和脚本不一致（不是eth0）执行脚本时不要一路回车 
      其中有一步要输入网卡名 要输入ifconfig中的名字
网上找了半天没找到ubuntu16.04怎么安装客户端。。。。
服务器是阿里云的，可以连接，但是没网。
开启了网络转发。
iphone
ipad
mac
连接都没问题，但是没网。
失败日志：
```
utils/utils/memory.h:99:15: error: ‘uintptr_t’ undeclared (first use in this function); did you mean ‘__intptr_t’?
  for (i = 0; (uintptr_t)&c[i] % sizeof(long) && i < n; i++)
               ^~~~~~~~~
               __intptr_t
```

可以参考strongswan的[Bug #2425](https://wiki.strongswan.org/issues/2425)，建议升级较新版本。
